--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -1,5 +1,9 @@
 <!-- start custom head snippets -->
 
+<link rel="apple-touch-icon" sizes="180x180" href="{{ site.baseurl }}/assets/images/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="{{ site.baseurl }}/assets/images/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="{{ site.baseurl }}/assets/images/favicon-16x16.png">
+<link rel="mask-icon" href="{{ site.baseurl }}/assets/images/safari-pinned-tab.svg" color="#5bbad5">
 <link rel="shortcut icon" type="image/png" href="{{ site.baseurl }}/favicon.ico">
 
 <!-- end custom head snippets -->
