--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -4,7 +4,10 @@
 <link rel="icon" type="image/png" sizes="32x32" href="{{ site.baseurl }}/assets/images/favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="16x16" href="{{ site.baseurl }}/assets/images/favicon-16x16.png">
 <link rel="mask-icon" href="{{ site.baseurl }}/assets/images/safari-pinned-tab.svg" color="#5bbad5">
+
+<!-- legacy favicon
 <link rel="shortcut icon" type="image/png" href="{{ site.baseurl }}/favicon.ico">
+-->
 
 <!-- end custom head snippets -->
 
