--- a/_sass/minimal-mistakes/skins/_pkp.scss
+++ b/_sass/minimal-mistakes/skins/_pkp.scss
@@ -24,5 +24,5 @@ $navicon-link-color-hover: mix(#fff, $text-color, 80%) !default;
 
 /* Fix clash between LinkedIn Logo blue and primary blue above */
 .fa-linkedin {
-  color: black;
+  color: black !important;
 }
